--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
       html{
         background-color: #ede7dd;
       }
+			.link{
+				cursor: hand;
+			}
     </style>
   </head>
   <body data-home-page="Home.html" data-home-page-title="Home" class="u-body u-xl-mode">
@@ -50,14 +53,14 @@
         </div>
       </div>
       <img class="u-image u-image-2" src="images/LSGHomepage1.png" data-image-width="1206" data-image-height="1195">
-      <img onclick="mint()" class="u-image u-image-default u-preserve-proportions u-image-3" src="images/LSGMintNow1.png" alt="" data-image-width="1362" data-image-height="361">
-      <img onclick="changeNum(-1)" class="u-image u-image-default u-preserve-proportions u-image-4" src="images/LSGSubtraction1.png" alt="" data-image-width="904" data-image-height="842">
-      <img onclick="changeNum(1)" class="u-image u-image-default u-preserve-proportions u-image-5" src="images/LSGAddition1.png" alt="" data-image-width="904" data-image-height="843">
+      <img onclick="mint()" class="link u-image u-image-default u-preserve-proportions u-image-3" src="images/LSGMintNow1.png" alt="" data-image-width="1362" data-image-height="361">
+      <img onclick="changeNum(-1)" class="link u-image u-image-default u-preserve-proportions u-image-4" src="images/LSGSubtraction1.png" alt="" data-image-width="904" data-image-height="842">
+      <img onclick="changeNum(1)" class="link u-image u-image-default u-preserve-proportions u-image-5" src="images/LSGAddition1.png" alt="" data-image-width="904" data-image-height="843">
       <p id="mintBtn" class="u-align-center u-text u-text-1">1</p>
       <p id="count3333" class="u-align-center u-text u-text-2">3333/3333</p>
       <img class="u-image u-image-default u-preserve-proportions u-image-6" src="images/LSGTwitter1.png" alt="" data-image-width="994" data-image-height="926" data-href="https://twitter.com/LSG_NFT" data-target="_blank">
       <img class="u-image u-image-default u-preserve-proportions u-image-7" src="images/LSGOpenSea1.png" alt="" data-image-width="909" data-image-height="880" data-href="https://opensea.io/collection/lsgnft" data-target="_blank">
-      <p id="addr" class="u-text u-text-default-xs u-text-3">Connect</p>
+      <p id="addr" class="link u-text u-text-default-xs u-text-3">Connect</p>
       <img id="connect" onclick="start()" class="u-image u-image-default u-preserve-proportions u-image-8" src="images/LSGWallet1.png" alt="" data-image-width="790" data-image-height="918">
       <img class="u-image u-image-default u-preserve-proportions u-image-9" src="images/LSGGetHelp1.png" alt="" data-image-width="1185" data-image-height="288" data-href="LSG-Help.html" data-page-id="875020369">
       <div id="nfts" style="display: none;"></div>
