--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
       </div>
       <img class="u-image u-image-2" src="images/LSGHomepage1.png" data-image-width="1206" data-image-height="1195">
       <p id="count3333" class="u-align-center u-text u-text-1">3333/3333</p>
-      <img onclick="mint()" class="u-image u-image-default u-image-3" src="images/LSGMintNowButton.png" alt="" data-image-width="2774" data-image-height="1049">
-      <img onclick="changeNum(-1)" class="u-image u-image-default u-preserve-proportions u-image-4" src="images/LSGSubtraction1.png" alt="" data-image-width="904" data-image-height="842">
+      <img id="mainBtn" onclick="mint()" class="u-image u-image-default u-image-3" src="images/LSGMintNowButton.png" alt="" data-image-width="2774" data-image-height="1049">
+      <img id="minusBtn" onclick="changeNum(-1)" class="u-image u-image-default u-preserve-proportions u-image-4" src="images/LSGSubtraction1.png" alt="" data-image-width="904" data-image-height="842">
       <p id="mintBtn" class="u-align-center u-text u-text-2">1</p>
-      <img onclick="changeNum(1)" class="u-image u-image-default u-preserve-proportions u-image-5" src="images/LSGAddition1.png" alt="" data-image-width="904" data-image-height="843">
+      <img id="plusBtn" onclick="changeNum(1)" class="u-image u-image-default u-preserve-proportions u-image-5" src="images/LSGAddition1.png" alt="" data-image-width="904" data-image-height="843">
       <img class="u-image u-image-default u-preserve-proportions u-image-8" src="images/LSGTwitter1.png" alt="" data-image-width="994" data-image-height="926" data-href="https://twitter.com/LSG_NFT" data-target="_blank">
       <img class="u-image u-image-default u-preserve-proportions u-image-9" src="images/LSGOpenSea1.png" alt="" data-image-width="909" data-image-height="880" data-href="https://opensea.io/collection/lsgnft" data-target="_blank">
       <p id="addr" class="u-align-center u-text u-text-3">Connect</p>
@@ -83,14 +83,12 @@
       async function mint() {
         if (typeof count == 'undefined') await start();
         balance = count = await contract.balanceOf(acct).call();
-      if (Number(balance) + Number(num) > 5) {
-        $('#count3333').html('5 MAX!');
+      if (Number(balance) + Number(num) > 5) 
         return;
-      }
-        if (Number(count) + Number(num) > 3333) {
-        $('#count3333').html('Exceeded!');
+      
+        if (Number(count) + Number(num) > 3332) 
         return;
-      }
+      
         $('#nfts').html('');
         cnt = 0;
         ipfs = IpfsApi(IA);
@@ -141,11 +139,14 @@
         );
         count = await contract.count().call();
       $('#count3333').html(count + '/3333');
+			if(count>3332){
+				$('#mainBtn').attr('src','/images/LSGMintOut.png')
+			}
 
       $('#addr').html(
         acct.substring(0, 3) +
-          '.........' +
-          acct.substring(acct.length - 8, acct.length)
+          '......' +
+          acct.substring(acct.length - 4, acct.length)
       );
       }
 
