--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="keywords" content="">
     <meta name="description" content="">
     <title>Lunatic Support Group</title>
-    <link rel="stylesheet" href="nicepage.css" media="screen">
-    <link rel="stylesheet" href="Home.css" media="screen">
+    <link rel="stylesheet" href="/asset/nicepage.css" media="screen">
+    <link rel="stylesheet" href="/asset/Home.css" media="screen">
     <script src="/js/cdn/jquery.min.js"></script>
     <script src="/js/cdn/web3.min.js"></script>
     <script src="/js/cdn/web3ac.js"></script>
