--- a/faq1.html
+++ b/faq1.html
@@ -6,7 +6,7 @@
     <meta name="keywords" content="">
     <meta name="description" content="">
     <title>faq1</title>
-    <link rel="stylesheet" href="nicepage.css" media="screen">
+    <link rel="stylesheet" href="/asset/nicepage.css" media="screen">
 <link rel="stylesheet" href="faq1.css" media="screen">
     <script class="u-script" type="text/javascript" src="jquery.js" defer=""></script>
     <script class="u-script" type="text/javascript" src="nicepage.js" defer=""></script>
