--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
       </div>
       <img class="u-image u-image-2" src="images/LSGHomepage1.png" data-image-width="1206" data-image-height="1195">
       <p id="count3333" class="u-align-center u-text u-text-1">3333/3333</p>
-      <img id="mainBtn" onclick="mint()" class="u-image u-image-default u-image-3" src="images/LSGMintNowButton.png" alt="" data-image-width="2774" data-image-height="1049">
-      <img id="minusBtn" onclick="changeNum(-1)" class="u-image u-image-default u-preserve-proportions u-image-4" src="images/LSGSubtraction1.png" alt="" data-image-width="904" data-image-height="842">
+      <img id="mainBtn" onclick="mint()" class="link u-image u-image-default u-image-3" src="images/LSGMintNowButton.png" alt="" data-image-width="2774" data-image-height="1049">
+      <img id="minusBtn" onclick="changeNum(-1)" class="link u-image u-image-default u-preserve-proportions u-image-4" src="images/LSGSubtraction1.png" alt="" data-image-width="904" data-image-height="842">
       <p id="mintBtn" class="u-align-center u-text u-text-2">1</p>
-      <img id="plusBtn" onclick="changeNum(1)" class="u-image u-image-default u-preserve-proportions u-image-5" src="images/LSGAddition1.png" alt="" data-image-width="904" data-image-height="843">
+      <img id="plusBtn" onclick="changeNum(1)" class="link u-image u-image-default u-preserve-proportions u-image-5" src="images/LSGAddition1.png" alt="" data-image-width="904" data-image-height="843">
       <img class="u-image u-image-default u-preserve-proportions u-image-6" src="images/LSGTwitter1.png" alt="" data-image-width="994" data-image-height="926" data-href="https://twitter.com/LSG_NFT" data-target="_blank">
       <img class="u-image u-image-default u-preserve-proportions u-image-7" src="images/LSGOpenSea1.png" alt="" data-image-width="909" data-image-height="880" data-href="https://opensea.io/collection/lsgnft" data-target="_blank">
       <p id="addr" class="u-align-center u-text u-text-3">Connect</p>
