--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       <img class="u-image u-image-default u-preserve-proportions u-image-6" src="images/LSGTwitter1.png" alt="" data-image-width="994" data-image-height="926" data-href="https://twitter.com/LSG_NFT" data-target="_blank">
       <img class="u-image u-image-default u-preserve-proportions u-image-7" src="images/LSGOpenSea1.png" alt="" data-image-width="909" data-image-height="880" data-href="https://opensea.io/collection/lsgnft" data-target="_blank">
       <p id="addr" class="u-align-center u-text u-text-3">Connect</p>
-      <img id="connect" onclick="start()" class="u-image u-image-default u-preserve-proportions u-image-8" src="images/LSGWallet1.png" alt="" data-image-width="790" data-image-height="918">
+      <img id="connect" onclick="start()" class="link u-image u-image-default u-preserve-proportions u-image-8" src="images/LSGWallet1.png" alt="" data-image-width="790" data-image-height="918">
       <img class="u-image u-image-default u-preserve-proportions u-image-9" src="images/LSGGetHelp1.png" alt="" data-image-width="1185" data-image-height="288" data-href="faq.html" data-page-id="875020369">
       <div id="nfts" style="display: none;"></div>
     </section>
