--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         var num = 1,
         CHAIN = 4,
         loaded = 1,
-	speech = ["Stop trying!","Don’t be greedy!","U crazy?"];
+	speech = ["Stop trying!","<span style='font-size:small'>Don’t be greedy!<span>","U crazy?"];
       function changeNum(n) {
         num += n;
         num = num < 1 ? 5 : num > 5 ? 1 : num;
