--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         background-color: #ede7dd;
       }
       .link{
-        cursor: hand;
+        cursor: pointer;
       }
     </style>
   </head>
