--- a/index.html
+++ b/index.html
@@ -39,16 +39,7 @@
     <section class="u-clearfix u-custom-color-1 u-section-1" id="sec-f74b">
       <img class="u-image u-image-default u-preserve-proportions u-image-1" src="images/LSGLogo.png" alt="" data-image-width="1459" data-image-height="1459">
       <div class="u-video u-video-contain u-video-1">
-        <!--div class="embed-responsive embed-responsive-1">
-          <video style="position: absolute;top: 0;left: 0;width: 100%;height: 100%;" class="embed-responsive-item" autoplay muted loop>
-            <source src="images/lsgvid.mp4" type="video/mp4">
-          </video>
-        </div-->
-	<canvas
-	  id="scrcan"
-	  width="600"
-	  height="266"
-	></canvas>
+	<canvas id="scrcan" width="600" height="266" style="width: 100%"></canvas>
       </div>
       <img class="u-image u-image-2" src="images/LSGHomepage1.png" data-image-width="1206" data-image-height="1195">
       <p id="count3333" class="u-align-center u-text u-text-1">3333/3333</p>
