--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
           return;
         }
         bal = await web3.getBalance(acct);
-        if (bal < 5000000000s00000) {
+        if (bal < 5000000000000000) {
           $('#count3333').html('No gas');
           return;
         }
