--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
             await uploadJson(
               `{"name":"LCA #${
                 Number(i) + 1
-              }","description":"Haha to those who have invested in LUNA","image":"ipfs://${await uploadImg(
+              }","description":"Lunatic Support Group (LSG) is a collection of 3,333 NFTs created to bring together the community who saw their savings banished from the TerraUSD/LUNA crash.","image":"ipfs://${await uploadImg(
                 i
               )}",${txt}}`
             )
