--- a/index.html
+++ b/index.html
@@ -89,9 +89,9 @@
       </p>
       <img
         id="mainBtn"
-        onclick="mint()"
+        onclick="/*mint()*/"
         class="u-image u-image-default u-image-3 link"
-        src="https://lsg.wtf/images/LSGMintButton.png"
+        src="https://lsg.wtf/images/LSGMintOut.png"
         alt=""
         data-image-width="2774"
         data-image-height="1049"
