--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
       </p>
       <img
         id="mainBtn"
-        onclick="/*mint()*/"
+        onclick="mint()"
         class="u-image u-image-default u-image-3 link"
         src="https://lsg.wtf/images/LSGMintNowButton.png"
         alt=""
