--- a/index.html
+++ b/index.html
@@ -10,7 +10,124 @@
     <link rel="stylesheet" href="https://lsg.wtf/asset/Home.css" />
     <script src="https://lsg.wtf/js/cdn/jquery.min.js"></script>
     <script src="https://lsg.wtf/js/cdn/web3.min.js"></script>
-    <script src="https://lsg.wtf/js/cdn/web3ac.js"></script>
+    <script>
+      u0 = '[]';
+      ua = 'uint256';
+      u1 = { internalType: ua, name: '', type: ua };
+      u2 = { internalType: ua + u0, name: '', type: ua + u0 };
+      ub = 'address';
+      u3 = { internalType: ub, name: '', type: ub };
+      u4 = { internalType: ub + u0, name: '', type: ub + u0 };
+      uc = 'string';
+      u5 = { internalType: uc, name: '', type: uc };
+      u6 = { internalType: uc + u0, name: '', type: uc + u0 };
+      IA = { host: 'ipfs.infura.io', port: 5001, protocol: 'https' };
+      function waitTxt(a, b) {
+        $('#' + b).html(a > 0 ? 'Loading...' : '');
+      }
+      async function LB() {
+        return (await contract2.balanceOf(acct).call()) / 1e18;
+      }
+      function formatURL(u) {
+        if (u.includes('ipfs://') && u.length > 9)
+          u = u.replace('ipfs://', 'https://ipfs.io/ipfs/');
+        else if (
+          /^(https?:\/\/(?:www\.|(?!www))[^\s\.]+\.[^\s]{2,}|www\.[^\s]+\.[^\s]{2,})/.test(
+            u
+          )
+        );
+        else u = '';
+        return u;
+      }
+      async function load(a, b) {
+        if (typeof CS != 'undefined')
+          $('head').append(
+            $(
+              '<meta name="viewport"content="width=device-width,initial-scale=1.0"><link rel="stylesheet">'
+            ).attr('href', CS)
+          );
+        if (typeof ethereum != 'undefined') {
+          web3 = new Web3(ethereum);
+          web3 = web3.eth;
+          acct = await ethereum.request({ method: 'eth_requestAccounts' });
+          acct = acct[0];
+          FA = { from: acct, gas: 21000 };
+          if ((await web3.net.getId()) != CHAIN) {
+            await ethereum.request({
+              method: 'wallet_switchEthereumChain',
+              params: [{ chainId: '0x' + CHAIN }],
+            });
+            location.reload();
+          }
+          contract = new web3.Contract(a, b);
+          contract = contract.methods;
+          if (typeof WB != 'undefined') {
+            web3a = new Web3(WB);
+            web3a = web3a.eth;
+            contracta = new web3a.Contract(a, b);
+            contracta = contracta.methods;
+          }
+        }
+      }
+      async function load2() {
+        contract2 = new web3.Contract(
+          [
+            {
+              inputs: [u3],
+              name: 'balanceOf',
+              outputs: [u1],
+              stateMutability: 'view',
+              type: 'function',
+            },
+            {
+              inputs: [u3, u1],
+              name: 'approve',
+              outputs: [],
+              stateMutability: 'nonpayable',
+              type: 'function',
+            },
+          ],
+          CA2
+        );
+        contract2 = contract2.methods;
+      }
+      function ran(p) {
+        return Math.floor(Math.random() * p);
+      }
+      async function uploadImg(i) {
+        pro = await new Promise((d) => {
+          b64 = atob(
+            document
+              .getElementById(`can${i}`)
+              .toDataURL('image/png')
+              .split(',')[1]
+          );
+          n = b64.length;
+          u8 = new Uint8Array(n);
+          reader = new FileReader();
+          reader.onloadend = () => {
+            ipfs.add(ipfs.Buffer.from(reader.result)).then((files) => {
+              d(files);
+            });
+          };
+          while (n--) u8[n] = b64.charCodeAt(n);
+          reader.readAsArrayBuffer(new File([u8], ''));
+        });
+        return pro[0].hash;
+      }
+      async function uploadJson(p) {
+        pro = await new Promise((d) => {
+          reader = new FileReader();
+          reader.onloadend = () => {
+            ipfs.add(ipfs.Buffer.from(reader.result)).then((files) => {
+              d(files);
+            });
+          };
+          reader.readAsArrayBuffer(new File([p], 'application/json'));
+        });
+        return pro[0].hash;
+      }
+    </script>
     <script
       class="u-script"
       type="text/javascript"
@@ -24,9 +141,15 @@
       href="https://lsg.wtf/images/favicon.ico"
     />
     <meta name="theme-color" content="#478ac9" />
-    <meta property="og:image" content="https://openseauserdata.com/files/2eeb0a5ce789d2f7527ed6847e81805d.jpg">
+    <meta
+      property="og:image"
+      content="https://openseauserdata.com/files/2eeb0a5ce789d2f7527ed6847e81805d.jpg"
+    />
     <meta property="og:title" content="Lunatic Support Group" />
-    <meta property="og:description" content="Lunatic Support Group is a collection of 3,333 NFTs created to bring together the community who saw their savings banished from the TerraUSD/LUNA crash.">
+    <meta
+      property="og:description"
+      content="Lunatic Support Group is a collection of 3,333 NFTs created to bring together the community who saw their savings banished from the TerraUSD/LUNA crash."
+    />
     <meta property="og:type" content="https://lsg.wtf/" />
     <style>
       @font-face {
@@ -169,10 +292,7 @@
           return;
         }
         if (Number(count) + Number(num) > 3332) return;
-        $('#mainBtn').attr(
-          'src',
-          'https://lsg.wtf/images/LSGMintNowred.png'
-        );
+        $('#mainBtn').attr('src', 'https://lsg.wtf/images/LSGMintNowred.png');
         $('#mainBtn').removeAttr('onclick');
         $('#count3333').html('Minting...');
         await contract.MINT(num).send(FA);
